fix one more ascb link

--- a/ascb/slides.html
+++ b/ascb/slides.html
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 # Introduction to ggplot as an entry way to R for beginners
 ## Teaching Tomorrow’s Scientists: <br>An ASCB Virtual Meeting
 ### Mine Dogucu
-### 2020-05-30 <br><br> 🔗<a href="https://bit.ly/acsb-ggplot">bit.ly/acsb-ggplot</a>
+### 2020-05-30 <br><br> 🔗<a href="https://bit.ly/ascb-ggplot">bit.ly/ascb-ggplot</a>
 
 ---
 
