--- a/ascb/slides.html
+++ b/ascb/slides.html
@@ -426,9 +426,12 @@ If you wanted to make the following plot and R could understand English what wou
 &lt;img src="slides_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
+
+class: middle 
+
 ## Three Steps of Making a basic ggplot
 
-- Make space for a plot using the dataset. 
+- Decide on what dataset to plot. 
 
 --
 
@@ -436,11 +439,11 @@ If you wanted to make the following plot and R could understand English what wou
 
 --
 
-- Decide what kind of a plot.
+- Decide on the type of the plot.
 
 ---
 
-## Step 1 - Make space for the plot
+## Step 1 - Decide on what dataset to plot
 
 .left-panel[
 
